Cambios realizados sobre el endpoint Refresh, aplicado tanto su servicio, ruta y test. Tambien ajustando la documentacion sobre  el mismo
