# src/routes/auth.routes.js
@@ -2,12 +2,18 @@ import { Router } from 'express'
 import {
   loginController,
   logoutController,
+  refreshController,
   registerController,
 } from '../controllers/auth.controller.js'
 import { credentials } from '../validators/credentialsAuth.js'
 import { validateFields } from '../middlewares/validateFields.js'
-import { loginRateLimit, registerRateLimit } from '../middlewares/rate.js'
+import {
+  loginRateLimit,
+  refreshRateLimit,
+  registerRateLimit,
+} from '../middlewares/rate.js'
 import { verifyAccessToken } from '../middlewares/verifyAccessToken.js'
+import { verifyRefreshToken } from '../middlewares/verifyRefreshToken.js'
 
 const router = Router()
 
@@ -28,5 +34,7 @@ router.post(
 )
 
 router.post('/logout', verifyAccessToken, logoutController)
+
+router.post('/refresh', refreshRateLimit, verifyRefreshToken, refreshController)
 
 export default router
